--- a/source/less/blocks/page__body.less
+++ b/source/less/blocks/page__body.less
@@ -5,10 +5,9 @@
   margin: 0 auto;
 
   @media (min-width: @desktop-width) {
-    background-image: url("../img/presentation-background.png");
+    background-image: url("../img/presentation-desktop.jpg");
     background-repeat: no-repeat;
     background-position: right top;
-    background-size: 696px;
   }
 }
 
