--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -5,6 +5,7 @@
 @basic-green-two: #5EAA2F;
 @basic-grey: #F2F2F2;
 @basic-black: #000000;
+@catalog-line: #EBEBEB;
 @special-dark-grey: #444444;
 @special-dark-greytwo: #222222;
 @special-black: #111111;
