--- a/source/less/blocks/page__body.less
+++ b/source/less/blocks/page__body.less
@@ -8,6 +8,10 @@
     background-image: url("../img/presentation-desktop.jpg");
     background-repeat: no-repeat;
     background-position: right top;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/presentation-desktop@2x.jpg");
+    }
   }
 }
 
