--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -19,10 +19,10 @@
 
 .example__wrapper {
   @media (min-width: @desktop-width) {
-    width: 570px;
+    width: 550px;
+    margin-right: 20px;
     padding-right: 0;
     padding-bottom: 75px;
-    margin-right: 80px;
   }
 }
 
@@ -39,15 +39,16 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 82px;
+    margin-top: 62px;
   }
 }
 
 .example__text {
-  margin: 33px 0 0;
+  margin: 33px 0 25px 0;
 
   @media (min-width: @tablet-width) {
     margin: 63px 0 0;
+    width: 680px;
     font-size: 16px;
     line-height: 24px;
   }
@@ -61,7 +62,7 @@
 .example__list {
   @media (min-width: @tablet-width) {
     display: inline-block;
-    margin-top: 25px;
+    margin-top: 54px;
     width: 380px;
   }
 
@@ -80,14 +81,14 @@
   border-radius: 5px;
 
   &:first-child {
-    margin-right: 20px;
+    margin-right: 24px;
   }
 
   @media (min-width: @tablet-width) {
     width: 162px;
 
     &:first-child {
-      margin-right: 42px;
+      margin-right: 38px;
     }
   }
 }
@@ -106,7 +107,7 @@
 
 .example__result {
   position: absolute;
-  bottom: -10px;
+  bottom: -15px;
   right: 20px;
   width: 86px;
   font-size: 12px;
@@ -116,6 +117,7 @@
   background-color: @special-grey;
 
   @media (min-width: @tablet-width) {
+    bottom: -6px;
     font-size: 14px;
     line-height: 14px;
     width: 130px;
@@ -134,7 +136,7 @@
 }
 
 .example__cost {
-  margin: 26px 0 0;
+  margin: 32px 0 0;
   line-height: 20px;
   text-transform: uppercase;
   text-align: center;
@@ -142,7 +144,8 @@
 
   @media (min-width: @tablet-width) {
     display: inline-block;
-    margin-left: 140px;
+    padding-top: 30px;
+    margin: 0 0 0 149px;
     font-size: 20px;
     width: 175px;
     text-align: end;
@@ -150,23 +153,24 @@
 
   @media (min-width: @desktop-width) {
     min-width: 324px;
-    margin: 55px 0 0 0;
+    margin: 30px 0 0 0;
     text-align: start;
   }
 }
 
 .example__slider {
-  margin-top: 42px;
+  margin-top: 38px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   color: @basic-black;
 
   @media (min-width: @tablet-width) {
+    height: 462px;
+    position: relative;
     font-size: 20px;
     line-height: 30px;
-    margin-top: 247px;
-    padding-bottom: 67px;
+    margin-top: 255px;
     background-color: @special-grey;
   }
 
@@ -180,19 +184,40 @@
 .slider__image {
   margin-bottom: 33px;
 
+  @media (min-width: @tablet-width) {
+    position: absolute;
+    top: -190px;
+    left: 30px;
+  }
+
   @media (min-width: @desktop-width) {
-    width: 570px;
-    height: 566px;
-    margin-bottom: 13px;
+    position: static;
+    margin-bottom: 0;
+  }
+}
+
+.slider__wrapper {
+  @media (min-width: @desktop-width) {
+    width: 576px;
+    margin-top: 20px;
+    margin-left: 80px;
   }
 }
 
 .slider__before {
   margin-left: 63px;
 
+  @media (min-width: @tablet-width) {
+    margin-left: 100px;
+  }
+
   @media (min-width: @desktop-width) {
     margin: 0;
   }
+}
+
+.slider__after {
+  margin: 0 0 0 13px;
 }
 
 .slider__before,
@@ -216,7 +241,7 @@
   display: inline-block;
   width: 84px;
   height: 14px;
-  margin: 0 17px;
+  margin: 0 0 0 15px;
   background-color: @basic-white;
   border: 1px solid @special-border-grey;
   box-sizing: border-box;
@@ -241,6 +266,8 @@
   }
 
   @media (min-width: @tablet-width) {
+    margin-top: 374px;
+    margin-left: 20px;
     display: inline-block;
     position: relative;
     width: 428px;
@@ -250,18 +277,18 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 11px 0 20px;
+    margin: 0 0 5px 20px;
   }
 }
 
 .slider-toggle {
   position: absolute;
   top: -10px;
-  left: 50%;
-  width: 5px;
-  height: 5px;
+  left: 46%;
+  width: 8px;
+  height: 8px;
   padding: 0;
-  border: 9px solid @basic-white;
+  border: 11px solid @basic-white;
   outline: 1px  @special-border-grey;
   background-color: @basic-green;
   border-radius: 50%;
