--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -3,7 +3,7 @@
   padding-bottom: 42px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 45px;
+    padding-top: 47px;
     padding-bottom: 0;
   }
 
@@ -34,7 +34,7 @@
     display: grid;
     grid-template-columns: 324px 324px;
     grid-template-rows: 1fr;
-    gap: 29px 58px;
+    gap: 24px 58px;
   }
 
   @media (min-width: @desktop-width) {
@@ -44,13 +44,17 @@
 }
 
 .features__item {
-  padding: 0 0 20px;
+  min-height: 60px;
+  margin: 0 0 10px;
+  padding: 4px 0;
 
   &:last-child {
-    padding: 0;
+    margin: 0;
+    padding: 7px 0 0 0;
   }
 
   @media (min-width: @tablet-width) {
+    margin: 0;
     padding: 0 0 104px;
 
     &:first-child {
@@ -58,20 +62,22 @@
     }
 
     &:nth-child(2) {
-      background: url("../../img/two.png") no-repeat 50% 0;
+      background: url("../../img/two.png") no-repeat 60% 0;
     }
 
     &:nth-child(3) {
-      background: url("../../img/three.png") no-repeat 50% 0;
+      background: url("../../img/three.png") no-repeat 60% 0;
     }
 
     &:last-child {
       padding: 0 0 104px;
-      background: url("../../img/four.png") no-repeat 50% 0;
+      background: url("../../img/four.png") no-repeat 60% 0;
     }
   }
 
   @media (min-width: @desktop-width) {
+    padding: 0 0 50px;
+
     &:first-child {
       background: url("../../img/one.png") no-repeat 75% 0;
     }
@@ -85,7 +91,7 @@
     }
 
     &:last-child {
-      padding: 0 0 104px;
+      padding: 0 0 60px;
       background: url("../../img/four.png") no-repeat 100% 0;
     }
   }
@@ -98,7 +104,7 @@
 
   @media (min-width: @tablet-width) {
     width: 245px;
-    margin-top: 111px;
+    margin-top: 115px;
     margin-left: 0;
     font-size: 16px;
     line-height: 24px;
@@ -109,6 +115,7 @@
   &::before {
     content: "";
     position: absolute;
+    top: -4px;
     left: -80px;
     width: 60px;
     height: 60px;
@@ -172,6 +179,7 @@
   &::before {
     content: "";
     position: absolute;
+    top: 2px;
     left: -80px;
     width: 60px;
     height: 60px;
