--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,7 +1,7 @@
 .social {
-  margin-top: 32px;
+  margin-top: 27px;
   padding-top: 20px;
-  padding-bottom: 21px;
+  padding-bottom: 17px;
   border-top: 1px solid @special-line-grey;
   border-bottom: 1px solid @special-line-grey;
 
@@ -14,5 +14,9 @@
 
 .social__list {
   display: flex;
+  width: 130px;
+  margin: 0 auto;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
