--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,5 +1,5 @@
 .catalog__title {
-  margin: 27px 0 41px 20px;
+  margin: 27px 0 39px 20px;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
@@ -36,7 +36,7 @@
 }
 
 .catalog__item {
-  padding: 19px 20px 25px;
+  padding: 19px 20px 24px;
   position: relative;
   border-top: 1px solid @catalog-line;
 
@@ -93,26 +93,32 @@
     top: -73px;
     left: 77px;
   }
+
+  @media (min-width: @desktop-width) {
+    top: -80px;
+    left: 40px;
+  }
 }
 
 .catalog-item-table {
+  border-collapse: collapse;
   width: 142px;
   position: absolute;
-  top: 78px;
+  top: 70px;
   left: 160px;
   font-size: 12px;
   line-height: 16px;
   color: @special-dark-grey;
 
   @media (min-width: @tablet-width) {
-    border-collapse: collapse;
-    margin-top: 21px;
+    margin-top: 17px;
     width: 251px;
     position: static;
     font-size: 16px;
   }
 
   @media (min-width: @desktop-width) {
+    margin-top: 22px;
     width: 173px;
   }
 }
@@ -149,6 +155,7 @@
     width: 248px;
     height: 39px;
     margin-top: 33px;
+    margin-left: 3px;
   }
 
   @media (min-width: @desktop-width) {
@@ -162,7 +169,7 @@
   border-bottom: 1px solid @catalog-line;
 
   @media (min-width: @tablet-width) {
-    padding: 161px 0 38px;
+    padding: 158px 0 38px;
     background-color: @basic-white;
     border: 2px solid @basic-grey;
     box-sizing: border-box;
@@ -197,8 +204,8 @@
     &::before {
       width: 60px;
       height: 60px;
-      top: 52px;
-      left: 132px;
+      top: 50px;
+      left: 130px;
       background-image: url("../img/plus_tablet.svg");
     }
   }
@@ -207,8 +214,8 @@
     line-height: 22px;
 
     &::before {
-      top: 51px;
-      left: 92px;
+      top: 48px;
+      left: 90px;
     }
   }
 }
@@ -221,7 +228,7 @@
 
   @media (min-width: @tablet-width) {
     width: 167px;
-    margin: 23px auto 0;
+    margin: 22px auto 0;
     font-size: 16px;
     line-height: 18px;
     text-align: center;
@@ -247,7 +254,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin: 87px auto 0;
+    margin: 85px auto 0;
     width: 249px;
     padding: 11px 0;
     text-align: center;
