--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -52,3 +52,10 @@
     text-align: start;
   }
 }
+
+.contacts__breake {
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    margin-top: 15px;
+  }
+}
