--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -10,36 +10,38 @@
   &::before {
     content: "";
     position: absolute;
-    top: 13px;
-    right: -75px;
-    width: 51px;
+    top: 16px;
+    left: 250px;
+    width: 1000px;
     border: 1px solid @basic-green;
+    box-sizing: border-box;
   }
 
   @media (min-width: @tablet-width) {
     width: 338px;
-    margin: 68px 0 0 36px;
+    margin: 66px 0 0 36px;
     font-size: 36px;
     line-height: 36px;
 
     &::before {
-      top: 20px;
+      top: 22px;
       left: 375px;
-      width: 326px;
+      width: 2000px;
     }
 
     &::after {
       content: "";
       position: absolute;
-      top: 20px;
+      top: 22px;
       left: -66px;
       width: 28px;
       border: 1px solid @basic-green;
+      box-sizing: border-box;
     }
   }
 
   @media (min-width: @desktop-width) {
-    margin: 76px 0 0 0;
+    margin: 73px 0 0 0;
 
     &::before {
       width: 955px;
@@ -69,7 +71,7 @@
 
   @media (min-width: @desktop-width) {
     width: 896px;
-    margin-top: 81px;
+    margin-top: 80px;
     margin-bottom: 86px;
     border: none;
   }
@@ -77,11 +79,7 @@
 
 .extra-list-item {
   padding-top: 13px;
-  padding-bottom: 19px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  padding-bottom: 17px;
   border-top: 1px solid @special-border-grey;
 
   &:last-child {
@@ -89,7 +87,11 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 26px 38px 28px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 26px 38px 26px;
 
     &:last-child {
       border-bottom: none;
@@ -138,24 +140,29 @@
 }
 
 .extra-item-quantity {
-  margin-top: 13px;
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 90px;
   width: 126px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 0;
+    margin-top: 3px;
     margin-left: 244px;
+    margin-right: 0;
     width: 132px;
     font-size: 16px;
     text-align: right;
   }
 
   @media (min-width: @desktop-width) {
-    margin: 29px 0 24px 163px;
+    margin: 29px 0 22px 163px;
+    text-align: start;
   }
 }
 
 .extra-item-price {
-  margin-top: 13px;
+  display: inline-block;
+  margin-top: 10px;
   width: 60px;
   text-align: right;
   margin-left: auto;
@@ -167,7 +174,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin: 29px 0 24px 112px;
+    margin: 29px 0 22px 112px;
+    text-align: start;
   }
 }
 
@@ -187,8 +195,9 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-top: 26px;
+    height: 38px;
     width: 633px;
+    margin-top: 26px;
   }
 
   @media (min-width: @desktop-width) {
@@ -199,24 +208,37 @@
 
 .extra__gift {
   position: relative;
+  margin: 35px 0;
   padding-top: 186px;
   padding-bottom: 43px;
   background: url("../img/gift-background.png") no-repeat;
 
+  @media (min-resolution: 2dppx) {
+    background: url("../img/gift-background@2x.png") no-repeat;
+  }
+
   @media (min-width: @tablet-width) {
-    margin-top: 69px;
+    margin-top: 72px;
     margin-bottom: 76px;
     padding-top: 71px;
     padding-bottom: 69px;
     width: 708px;
     background: url("../img/gift-photo-tablet.jpg") no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background: url("../img/gift-photo-tablet@2x.jpg") no-repeat;
+    }
   }
 
   @media (min-width: @desktop-width) {
     margin: 80px 0 86px 79px;
     padding: 185px 0 42px;
     width: 245px;
-    background: url("../img/gift-photo-desktop.jpg");
+    background: url("../img/gift-photo-desktop.jpg") no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background: url("../img/gift-photo-desktop@2x.jpg") no-repeat;
+    }
   }
 }
 
@@ -250,5 +272,10 @@
   @media (min-width: @desktop-width) {
     margin: auto;
     text-align: center;
+
+    &::before {
+      top: 55px;
+      left: 85px;
+    }
   }
 }
