--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -111,6 +111,14 @@
   }
 }
 
+.tablet-brake {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: block;
+  }
+}
+
 .features__icon-one {
   &::before {
     content: "";
