--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,7 +1,9 @@
 .presentation {
   display: flex;
   flex-direction: column;
-  background: url("../img/presentation-background.jpg") no-repeat;
+  background:
+    url("../img/presentation-background.jpg") no-repeat,
+    linear-gradient(to bottom, @basic-green 28%, @basic-white 28% 100%);
   background-size: contain;
 
   @media (min-resolution: 2dppx) {
