--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -20,3 +20,38 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.icon-vkontakte {
+  @media (min-width: @tablet-width) {
+    width: 30px;
+    height: 22px;
+  }
+}
+
+.icon-instagram {
+  @media (min-width: @tablet-width) {
+    width: 23px;
+    height: 23px;
+  }
+}
+
+.icon-facebook {
+  @media (min-width: @tablet-width) {
+    width: 28px;
+    height: 33px;
+  }
+}
+
+.icon-vkontakte,
+.icon-instagram,
+.icon-facebook {
+  color: @special-grey2;
+
+  &:hover {
+    color: @basic-green;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
