--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -145,7 +145,7 @@
   @media (min-width: @tablet-width) {
     display: inline-block;
     padding-top: 30px;
-    margin: 0 0 0 149px;
+    margin: 30px 0 0 149px;
     font-size: 20px;
     width: 175px;
     text-align: end;
@@ -155,6 +155,12 @@
     min-width: 324px;
     margin: 30px 0 0 0;
     text-align: start;
+  }
+}
+
+.cost-number {
+  @media (min-width: @tablet-width) {
+    line-height: 40px;
   }
 }
 
@@ -191,15 +197,15 @@
   }
 
   @media (min-width: @desktop-width) {
-    position: static;
-    margin-bottom: 0;
+    top: 0;
+    left: -20px;
   }
 }
 
 .slider__wrapper {
   @media (min-width: @desktop-width) {
     width: 576px;
-    margin-top: 20px;
+    margin-top: 570px;
     margin-left: 80px;
   }
 }
