--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,6 +10,7 @@
 @special-dark-greytwo: #222222;
 @special-black: #111111;
 @special-grey: #EAEAEA;
+@special-grey2: #666666;
 @line-grey: #E6E6E6;
 @special-line-grey: #D9D9D9;
 @special-border-grey: #CDCDCD;
