--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,5 +18,6 @@
 @import "blocks/extra.less";
 @import "blocks/page-footer.less";
 @import "blocks/contacts.less";
+@import "blocks/map.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
