Оптимизация графики на странице формы

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -175,12 +175,8 @@
   }
 }
 
-.form__option-field:disabled + .icon_email line {
-  stroke: @basic-green;
-}
-
-.form__option-field:disabled + .icon_email path {
-  stroke: @basic-green;
+.form__option-field:disabled + .icon_email {
+  color: @basic-green;
 }
 
 .wish {
@@ -315,7 +311,7 @@
     position: absolute;
     top: 15px;
     left: 200px;
-    width: 1000px;
+    width: 100px;
     border: 1px solid @basic-green;
     box-sizing: border-box;
   }
@@ -327,7 +323,7 @@
     &::before {
       top: 20px;
       left: 550px;
-      width: 2000px;
+      width: 147px;
     }
 
     &::after {
@@ -376,6 +372,7 @@
 
 .icon_email {
   position: absolute;
+  color: @special-dark-greytwo;
   top: 16px;
   right: 15px;
 
@@ -423,7 +420,7 @@
     position: absolute;
     top: 16px;
     left: 140px;
-    width: 1000px;
+    width: 159px;
     border: 1px solid @basic-green;
     box-sizing: border-box;
   }
@@ -443,7 +440,7 @@
       position: absolute;
       top: 21px;
       left: 220px;
-      width: 2000px;
+      width: 478px;
       border: 1px solid @basic-green;
       box-sizing: border-box;
     }
@@ -511,7 +508,7 @@
     position: absolute;
     top: 15px;
     left: 165px;
-    width: 1000px;
+    width: 136px;
     border: 1px solid @basic-green;
     box-sizing: border-box;
   }
@@ -523,7 +520,7 @@
     &::before {
       top: 20px;
       left: 250px;
-      width: 2000px;
+      width: 447px;
     }
 
     &::after {
