--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -99,6 +99,8 @@
   font-size: 14px;
   line-height: 18px;
   order: 4;
+  text-decoration: none;
+  text-align: center;
 
   &:hover {
     background-color: @basic-green-two;
@@ -110,7 +112,7 @@
 
   @media (min-width: @tablet-width) {
     width: 244px;
-    height: 54px;
+    padding: 17px 0;
     font-size: 20px;
     line-height: 20px;
     order: 3;
